--- a/.gitignore
+++ b/.gitignore
@@ -455,3 +455,4 @@
 obj
 /Tests/WpfApp1/bin/Debug/net6.0-windows
 /Tests/BlankApp1/bin/Debug/net6.0-windows
+/Tests/UpdateTest/bin/Debug/net6.0-windows
