--- a/Tests/ConsoleApp2/ConsoleApp2.csproj
+++ b/Tests/ConsoleApp2/ConsoleApp2.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="5.0.1" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="6.0.1" />
+    <PackageReference Include="System.Management" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
