--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -73,6 +73,9 @@
     </ApplicationDefinition>
     <Compile Include="CuStaticResourceExtension.cs" />
     <Compile Include="Datatemplate1Selector.cs" />
+    <Compile Include="ExcelWindow.xaml.cs">
+      <DependentUpon>ExcelWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Interface1.cs" />
     <Compile Include="ItemsComtrolDragHelper.cs" />
     <Compile Include="LineFlood\FloodGate.xaml.cs">
@@ -155,6 +158,10 @@
       <DependentUpon>Window9.xaml</DependentUpon>
     </Compile>
     <Compile Include="WinformToWpfTest.cs" />
+    <Page Include="ExcelWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LineFlood\FloodGate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -346,6 +353,9 @@
     <PackageReference Include="NLog.Config">
       <Version>4.7.15</Version>
     </PackageReference>
+    <PackageReference Include="NPOI">
+      <Version>2.5.6</Version>
+    </PackageReference>
     <PackageReference Include="Portable.BouncyCastle">
       <Version>1.9.0</Version>
     </PackageReference>
@@ -360,6 +370,12 @@
     </PackageReference>
     <PackageReference Include="Svg2Xaml">
       <Version>0.3.0.7</Version>
+    </PackageReference>
+    <PackageReference Include="SvgToXamlConverter">
+      <Version>0.10.14</Version>
+    </PackageReference>
+    <PackageReference Include="System.Speech">
+      <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
