--- a/.gitignore
+++ b/.gitignore
@@ -457,3 +457,4 @@ obj
 /Tests/BlankApp1/bin/Debug/net6.0-windows
 /Tests/UpdateTest/bin/Debug/net6.0-windows
 /Tests/TemplateDemo/bin/Debug/net6.0
+/Tests/TrainDiagram/bin/Debug/net6.0-windows
