--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,4 @@ obj
 /Tests/TemplateDemo/bin/Debug/net6.0
 /Tests/TrainDiagram/bin/Debug/net6.0-windows
 /PrintWindow/bin/Debug/net6.0-windows
+/Tests/SpeachDemo/bin/Debug/net6.0-windows
