--- a/.gitignore
+++ b/.gitignore
@@ -463,3 +463,4 @@ obj
 /Tests/ClassLibrary1/bin/Debug/net6.0
 /Tests/WpfApp2/bin/Debug
 /Tests/WpfApp2/WpfApp2/bin/Debug
+/Tests/AppWindowDemo/bin/Debug
