--- a/.gitignore
+++ b/.gitignore
@@ -464,3 +464,5 @@ obj
 /Tests/WpfApp2/bin/Debug
 /Tests/WpfApp2/WpfApp2/bin/Debug
 /Tests/AppWindowDemo/bin/Debug
+/PDFDemo/bin/Debug
+/Tests/WpfApp3/bin/Debug/net6.0-windows
