--- a/Demo/PDFDemo/PDFDemo.csproj
+++ b/Demo/PDFDemo/PDFDemo.csproj
@@ -6,7 +6,11 @@
     <UseWPF>true</UseWPF>
 	  <LangVersion>latest</LangVersion>
   </PropertyGroup>
-
+	<!--<ItemGroup>
+		<ReferenceCopyLocalPaths Include="PDFDemo\bin\$(Configuration)\*.dll">
+			<DestinationSubDirectory>$(Configuration)\$(AssemblyName)\</DestinationSubDirectory>
+		</ReferenceCopyLocalPaths>
+	</ItemGroup>-->
   <ItemGroup>
     <PackageReference Include="QuestPDF" Version="2022.11.0" />
   </ItemGroup>
@@ -17,4 +21,5 @@
     </Page>
   </ItemGroup>
 
+	
 </Project>
